--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,15 @@
-# Prerequisites
-*.d
+.vs/
+.idea/
+bin/
+obj/
+*.user
+*.suo
+/.vs
+/src/.vs
+/src/*/bin
+/src/*/obj
+**/packages
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+*.vspscc
+*.vssscc
+*/.idea
