--- a/ZPasswordsKeeper/ZPasswordsKeeper.csproj
+++ b/ZPasswordsKeeper/ZPasswordsKeeper.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
+
 
 </Project>
